<resources>
    <string name="app_name">LloydsAssignmentApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Animal List Fragment</string>
    <string name="second_fragment_label">Animal Detail Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_data">No Data</string>
    <string name="name">Name</string>
    <string name="latin_name">Latin Name</string>
    <string name="type">Type</string>
    <string name="lifespan">Lifespan</string>
    <string name="length_min">Length Min</string>
    <string name="length_max">Length Max</string>
    <string name="weight_min">Weight Min</string>
    <string name="weight_max">Weight Max</string>
    <string name="diet">Diet</string>
    <string name="habitat">Habitat</string>
    <string name="geo_range">Geo range</string>
</resources>